--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ table, th, td {
 }
 
 img {
-  max-width: 100%;
+  max-width: 60%;
   height: auto;
   display: block;
 }
@@ -87,8 +87,6 @@ img {
   display: flex; 
 }
 
-
-
 .row {
   display: flex;
 }
@@ -122,14 +120,15 @@ img {
 
 .img-input-div {
   display: flex;
+  flex-direction: column;
 }
 
 .img-div{
   max-width: 100%;
   overflow: scroll;
-  width: 30vw;
-  height: 18vh;
-  background-color: grey;
+  width: 100%;
+  height: 25vh;
+  background-color: rgb(245, 245, 245);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,17 +139,33 @@ img {
   width: 100px;
   height: 30px;
   padding: 10px;
-  margin-left: 20px;
+  /* margin-left: 20px; */
 }
 
 .timer{
-  width: 100px;
+  width: 10%;
   border: solid;
   display: flex;
   flex-direction: column;
   border-radius: 20px;
   align-items: center;
   background-color: cadetblue;
+  padding: 20px;
+}
+
+.timer-instructions-div {
+  display:flex;
+  justify-content:space-between;
+  justify-items: space-between; 
+  width: 80%; 
+  border-radius: 20px
+}
+
+.timer-instructions {
+  width: 50%;
+  padding:0p; 
+  color: blue; 
+  text-justify:auto;
 }
 
 .progress-container {
@@ -176,5 +191,36 @@ img {
   }
   .img-div{
     height: 60vh;
+  }
+
+  img{
+    max-width: 100%;
+  }
+
+  .timer {
+    width: 70%;
+    height: 10%;
+    border: solid;
+    display: flex;
+    border-radius: 20px;
+    align-items: center;
+    background-color: cadetblue;
+    padding: 20px;
+    /* margin-left: 30px; */
+  }
+
+  .timer-instructions-div {
+    display:flex; 
+    flex-direction: column-reverse;
+    justify-content:space-between;
+    justify-items: space-between; 
+    width: 80%; 
+    border-radius: 20px
+  }
+  .timer-instructions {
+    width: 100%;
+    padding:0p; 
+    color: blue; 
+    text-justify:auto;
   }
 }
