--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@ table, th, td {
 }
 
 img {
-  max-width: 60%;
-  height: auto;
+  max-width: 35%;
+  max-height: auto;
   display: block;
 }
 
@@ -125,7 +125,7 @@ img {
 
 .img-div{
   max-width: 100%;
-  overflow: scroll;
+  overflow: hidden;
   width: 100%;
   height: 25vh;
   background-color: rgb(245, 245, 245);
@@ -223,4 +223,10 @@ img {
     color: blue; 
     text-justify:auto;
   }
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
 }
